==> nopnop2002/esp-idf-rf69/components/rf69/rf69.c <==
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include "esp_log.h"
#include <rf69.h>
#define TAG "RF69"
#define RH_BROADCAST_ADDRESS 0xff
#define CONFIG_FSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_NONE)
#define CONFIG_GFSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_BT1_0)
#define CONFIG_OOK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_OOK | RH_RF69_DATAMODUL_MODULATIONSHAPING_OOK_NONE)
#define CONFIG_NOWHITE (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_NONE | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_WHITE (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_WHITENING | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_MANCHESTER (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_MANCHESTER | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define HOST_ID SPI2_HOST
#define HOST_ID SPI3_HOST
#define LOW 0
#define HIGH 1
#define delayMicroseconds(us) esp_rom_delay_us(us)
#define delay(ms) esp_rom_delay_us(ms*1000)
#define millis() xTaskGetTickCount()*portTICK_PERIOD_MS

uint8_t spi_transfer(uint8_t address)
{
	uint8_t datain[1];
	uint8_t dataout[1];
	dataout[0] = address;
	//spi_write_byte(dev, dataout, 1 );
	//spi_read_byte(datain, dataout, 1 );

	spi_transaction_t SPITransaction;
	memset( &SPITransaction, 0, sizeof( spi_transaction_t ) );
	SPITransaction.length = 8;
	SPITransaction.tx_buffer = dataout;
	SPITransaction.rx_buffer = datain;
	spi_device_transmit( _handle, &SPITransaction );

	return datain[0];
}

uint8_t spiRead(uint8_t reg)
{
	uint8_t val;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	spi_transfer(reg & ~RH_RF69_SPI_WRITE_MASK); // Send the address with the write mask off
	val = spi_transfer(0); // The written value is ignored, reg value is read
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return val;
}

uint8_t spiWrite(uint8_t reg, uint8_t val)
{
	uint8_t status = 0;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	status = spi_transfer(reg | RH_RF69_SPI_WRITE_MASK); // Send the address with the write mask on
	spi_transfer(val); // New value follows
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return status;
}

uint8_t spiBurstRead(uint8_t reg, uint8_t* dest, uint8_t len)
{
	uint8_t status = 0;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	status = spi_transfer(reg & ~RH_RF69_SPI_WRITE_MASK); // Send the start address with the write mask off
	while (len--) *dest++ = spi_transfer(0);
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return status;
}

uint8_t spiBurstWrite(uint8_t reg, const uint8_t* src, uint8_t len)
{
	uint8_t status = 0;
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	status = spi_transfer(reg | RH_RF69_SPI_WRITE_MASK); // Send the start address with the write mask on
	while (len--) spi_transfer(*src++);
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	return status;
}

bool init()
{

	// manual reset
	ESP_LOGW(TAG, "Pull high for 100 milliseconds to reset");
	gpio_set_direction(CONFIG_RST_GPIO, GPIO_MODE_OUTPUT);
	gpio_set_level(CONFIG_RST_GPIO, HIGH);
	delay(100);
	gpio_set_level(CONFIG_RST_GPIO, LOW);
	delay(100);

	_idleMode = RH_RF69_OPMODE_MODE_STDBY;

	spi_init();

	// Get the device type and check it
	// This also tests whether we are really connected to a device
	// My test devices return 0x24
	_deviceType = spiRead(RH_RF69_REG_10_VERSION);
	ESP_LOGI(TAG, "_deviceType=%x", _deviceType);
	if (_deviceType != 0x24) return false;
#if 0
	if (_deviceType == 00 ||
	_deviceType == 0xff)
	return false;
#endif

	setModeIdle();

	// Configure important RH_RF69 registers
	// Here we set up the standard packet format for use by the RH_RF69 library:
	// 4 bytes preamble
	// 2 SYNC words 2d, d4
	// 2 CRC CCITT octets computed on the header, length and data (this in the modem config data)
	// 0 to 60 bytes data
	// RSSI Threshold -114dBm
	// We dont use the RH_RF69s address filtering: instead we prepend our own headers to the beginning
	// of the RH_RF69 payload
	spiWrite(RH_RF69_REG_3C_FIFOTHRESH, RH_RF69_FIFOTHRESH_TXSTARTCONDITION_NOTEMPTY | 0x0f); // thresh 15 is default
	// RSSITHRESH is default
//	  spiWrite(RH_RF69_REG_29_RSSITHRESH, 220); // -110 dbM
	// SYNCCONFIG is default. SyncSize is set later by setSyncWords()
//	  spiWrite(RH_RF69_REG_2E_SYNCCONFIG, RH_RF69_SYNCCONFIG_SYNCON); // auto, tolerance 0
	// PAYLOADLENGTH is default
//	  spiWrite(RH_RF69_REG_38_PAYLOADLENGTH, RH_RF69_FIFO_SIZE); // max size only for RX
	// PACKETCONFIG 2 is default
	spiWrite(RH_RF69_REG_6F_TESTDAGC, RH_RF69_TESTDAGC_CONTINUOUSDAGC_IMPROVED_LOWBETAOFF);
	// If high power boost set previously, disable it
	spiWrite(RH_RF69_REG_5A_TESTPA1, RH_RF69_TESTPA1_NORMAL);
	spiWrite(RH_RF69_REG_5C_TESTPA2, RH_RF69_TESTPA2_NORMAL);

	// The following can be changed later by the user if necessary.
	// Set up default configuration
	uint8_t syncwords[] = { 0x2d, 0xd4 };
	setSyncWords(syncwords, sizeof(syncwords)); // Same as RF22's
	// Reasonably fast and reliable default speed and modulation
	setModemConfig(GFSK_Rb250Fd250);

	// 3 would be sufficient, but this is the same as RF22's
	setPreambleLength(4);
	// An innocuous ISM frequency, same as RF22's
	setFrequency(434.0);
	// No encryption
	setEncryptionKey(NULL);
	// +13dBm, same as power-on default
	setTxPower(13, RH_RF69_DEFAULT_HIGHPOWER);

	return true;
}

void readFifo()
{
	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	spi_transfer(RH_RF69_REG_00_FIFO); // Send the start address with the write mask off
	uint8_t payloadlen = spi_transfer(0); // First byte is payload len (counting the headers)
	if (payloadlen <= RH_RF69_MAX_ENCRYPTABLE_PAYLOAD_LEN &&
	payloadlen >= RH_RF69_HEADER_LEN)
	{
	_rxHeaderTo = spi_transfer(0);
	// Check addressing
	if (_promiscuous ||
		_rxHeaderTo == _thisAddress ||
		_rxHeaderTo == RH_BROADCAST_ADDRESS)
	{
		// Get the rest of the headers
		_rxHeaderFrom  = spi_transfer(0);
		_rxHeaderId    = spi_transfer(0);
		_rxHeaderFlags = spi_transfer(0);
		// And now the real payload
		for (_bufLen = 0; _bufLen < (payloadlen - RH_RF69_HEADER_LEN); _bufLen++)
		_buf[_bufLen] = spi_transfer(0);
		_rxGood++;
		_rxBufValid = true;
	}
	}
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);
	// Any junk remaining in the FIFO will be cleared next time we go to receive mode.
}

bool send(const uint8_t* data, uint8_t len)
{
	if (len > RH_RF69_MAX_MESSAGE_LEN)
	return false;

#if 0
	waitPacketSent(); // Make sure we dont interrupt an outgoing message
#endif
	setModeIdle(); // Prevent RX while filling the fifo

#if 0
	if (!waitCAD())
	return false;  // Check channel activity
#endif

	ESP_LOGD(TAG, "_txHeaderTo=%d", _txHeaderTo);
	ESP_LOGD(TAG, "_txHeaderFrom=%d", _txHeaderFrom);
	ESP_LOGD(TAG, "_txHeaderId=%d", _txHeaderId);
	ESP_LOGD(TAG, "_txHeaderFlags=%d", _txHeaderFlags);

	gpio_set_level(CONFIG_NSS_GPIO, LOW);
	spi_transfer(RH_RF69_REG_00_FIFO | RH_RF69_SPI_WRITE_MASK); // Send the start address with the write mask on
	spi_transfer(len + RH_RF69_HEADER_LEN); // Include length of headers

	spi_transfer(_txHeaderTo);
	spi_transfer(_txHeaderFrom);
	spi_transfer(_txHeaderId);
	spi_transfer(_txHeaderFlags);
	// Now the payload
	while (len--)
	spi_transfer(*data++);
	gpio_set_level(CONFIG_NSS_GPIO, HIGH);

	setModeTx(); // Start the transmitter
	vTaskDelay(1);
	return true;
}
